rm baseurl to prevent path aliases for submodule

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -14,8 +14,7 @@
     "rootDir": ".",
     "outDir": "./dist",
     "newLine": "LF",
-    "composite": true,
-    "baseUrl": "."
+    "composite": true
   },
   "exclude": [
     "node_modules/*"
